# dual-flexiv-control

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: run_system.py
src/dual_flexiv_control/: __init__.py  cameras.py  configs.py  process.py  proprio.py  system.py
src/dual_flexiv_control/brain/: __init__.py  brain.py
src/dual_flexiv_control/conf/: __init__.py  config.yaml
src/dual_flexiv_control/conf/arm/: flexiv.yaml
src/dual_flexiv_control/conf/brain/: default.yaml
src/dual_flexiv_control/conf/camera/: zed2_static.yaml  zedx_wrist.yaml
src/dual_flexiv_control/conf/control/: eef_vel.yaml  end_effector.yaml  force.yaml  qpos.yaml  qvel.yaml
src/dual_flexiv_control/conf/control_coeffs/: compliant.yaml  default.yaml  stiff.yaml
src/dual_flexiv_control/conf/factr/: bimanual.yaml
src/dual_flexiv_control/conf/runtime/: default.yaml
src/dual_flexiv_control/conf/task/: default.yaml  handover.yaml
src/dual_flexiv_control/control/: __init__.py  channel.py  convention.py  message.py
src/dual_flexiv_control/dashboard/: __init__.py  app.py  arms.py  blueprints.py  cameras.py  editor.py  launch.py  runner.py  tasks.py  viewer.py
src/dual_flexiv_control/interfaces/: __init__.py
src/dual_flexiv_control/interfaces/factr/: __init__.py  client.py
src/dual_flexiv_control/interfaces/flexiv/: __init__.py  interface.py  source.py  states.py
src/dual_flexiv_control/interfaces/zed/: __init__.py  interface.py  source.py
src/dual_flexiv_control/streams/: __init__.py  registry.py  ring.py  spec.py  stream.py
tests/: test_cameras.py  test_configs.py  test_control_channel.py  test_convention.py  test_dashboard.py  test_factr.py  test_ring.py  test_streams.py  test_system.py
