[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dual-flexiv-control"
version = "0.1.0"
description = "Bimanual Flexiv control brain: shared-memory data streams, real flexivrdk proprioception, and a FACTR teleop interface."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "James Ross" }]
dependencies = [
    "numpy>=2.0",
    "flexivrdk>=2.1.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Experiment dashboard (Streamlit control panel + embedded Rerun web viewer).
# Rerun pins to the 0.33 line because serve_grpc/serve_web_viewer are version-
# matched to the bundled web viewer and the serve API still moves between minors.
dashboard = [
    "rerun-sdk>=0.33,<0.34",
    "streamlit>=1.40",
]

[project.scripts]
dual-flexiv-control = "dual_flexiv_control.system:main"
dfc-cleanup-shm = "dual_flexiv_control.streams.registry:cleanup_cli"
dfc-dashboard = "dual_flexiv_control.dashboard.launch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dual_flexiv_control"]
# Ship the Hydra YAML config tree as package data.
artifacts = ["src/dual_flexiv_control/conf/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end runs that spawn the whole system (deselect with '-m \"not slow\"')",
]
